--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,6 +14,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - ls target  # This will list the contents of the target directory to ensure the JAR file is there
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
