--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - mvn clean install
       - echo Logging in to Amazon ECR...
       - aws --version
       - REPOSITORY_URI=132906916903.dkr.ecr.us-east-1.amazonaws.com/techbrain-repository
@@ -26,6 +27,12 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG  # Push unique build tag
       - echo Writing image definitions file...
       - printf '[{"name":"SpringBootLearn-1.0","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json  # Write the image URI to file
+      - echo Writing image definitions file...
+      # add your container name
+      - DOCKER_CONTAINER_NAME=techbrain-repository
+      - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo $DOCKER_CONTAINER_NAME
+      - echo printing imagedefinitions.json
       - cat imagedefinitions.json  # Print the file content to check
 
 artifacts:
